--- a/index.html
+++ b/index.html
@@ -1,51 +1,199 @@
+<!--
+CAREMETEASE – COMPLETE STATIC WEBSITE (GITHUB PAGES READY)
+=========================================================
+Copy this entire structure into your GitHub repository.
+Each section below represents a separate file.
+
+FOLDER STRUCTURE:
+/
+  index.html
+  services.html
+  how-it-works.html
+  why-mexico.html
+  about.html
+  contact.html
+  /assets
+    /css/style.css
+    /js/main.js
+
+=========================================================
+-->
+
+<!-- ================= index.html (HOME) ================= -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>My Website</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      background: #f4f4f4;
-      text-align: center;
-    }
-    header {
-      background: #111;
-      color: white;
-      padding: 40px 20px;
-    }
-    section {
-      padding: 40px 20px;
-    }
-    footer {
-      background: #222;
-      color: white;
-      padding: 20px;
-    }
-  </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>CaremetEase | Affordable Medical & Dental Travel</title>
+  <meta name="description" content="CaremetEase coordinates affordable medical and dental travel to Mexico, including flights, hotels, and clinic scheduling." />
+  <link rel="stylesheet" href="assets/css/style.css" />
+  <script defer src="assets/js/main.js"></script>
 </head>
 <body>
 
-<header>
-  <h1>Welcome to My Website</h1>
-  <p>Built for free using GitHub Pages</p>
+<nav class="navbar">
+  <div class="logo">CaremetEase</div>
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="services.html">Services</a></li>
+    <li><a href="how-it-works.html">How It Works</a></li>
+    <li><a href="why-mexico.html">Why Mexico</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="contact.html" class="btn">Get a Quote</a></li>
+  </ul>
+</nav>
+
+<header class="hero">
+  <h1>Affordable Medical & Dental Travel Made Easy</h1>
+  <p>We coordinate flights, hotels, and medical appointments in Mexico so you can focus on your health and savings.</p>
+  <div class="hero-buttons">
+    <a href="contact.html" class="btn-primary">Get a Free Quote</a>
+    <a href="how-it-works.html" class="btn-secondary">How It Works</a>
+  </div>
 </header>
 
-<section>
-  <h2>About</h2>
-  <p>This website has no watermark and no monthly fees.</p>
-</section>
-
-<section>
-  <h2>Contact</h2>
-  <p>Email: example@email.com</p>
+<section class="trust">
+  <div class="card">Licensed & Accredited Clinics</div>
+  <div class="card">English-Speaking Staff</div>
+  <div class="card">50–70% Cost Savings</div>
 </section>
 
 <footer>
-  <p>© 2025 Your Name</p>
+  <p>📞 915‑691‑4333 | ✉️ jacobwillis@tlhschools.org</p>
+  <p>CaremetEase does not provide medical services. We coordinate travel and logistics only.</p>
+  <p>© 2025 CaremetEase</p>
 </footer>
 
 </body>
 </html>
+
+<!-- ================= services.html ================= -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Services | CaremetEase</title>
+  <link rel="stylesheet" href="assets/css/style.css" />
+</head>
+<body>
+<h1>Our Services</h1>
+<div class="grid">
+  <div class="card">Medical Travel Coordination</div>
+  <div class="card">Dental Tourism</div>
+  <div class="card">Flight Booking Assistance</div>
+  <div class="card">Hotel & Recovery Stays</div>
+  <div class="card">Ground Transportation</div>
+  <div class="card">Clinic Scheduling & Support</div>
+</div>
+</body>
+</html>
+
+<!-- ================= how-it-works.html ================= -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>How It Works | CaremetEase</title>
+  <link rel="stylesheet" href="assets/css/style.css" />
+</head>
+<body>
+<h1>How It Works</h1>
+<ol class="timeline">
+  <li>Request a free quote</li>
+  <li>Medical review & clinic match</li>
+  <li>Travel planning (flights & hotel)</li>
+  <li>Procedure in Mexico</li>
+  <li>Recovery & return home</li>
+</ol>
+</body>
+</html>
+
+<!-- ================= why-mexico.html ================= -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Why Mexico | CaremetEase</title>
+  <link rel="stylesheet" href="assets/css/style.css" />
+</head>
+<body>
+<h1>Why Mexico?</h1>
+<ul>
+  <li>50–70% lower costs than the U.S.</li>
+  <li>Internationally accredited clinics</li>
+  <li>Short travel distance</li>
+  <li>Top cities: Tijuana, Cancun, Mexico City</li>
+</ul>
+</body>
+</html>
+
+<!-- ================= about.html ================= -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>About Us | CaremetEase</title>
+  <link rel="stylesheet" href="assets/css/style.css" />
+</head>
+<body>
+<h1>About CaremetEase</h1>
+<p>CaremetEase is a patient‑first medical and dental travel coordination service focused on safety, transparency, and comfort. We are not a medical provider — we are your trusted travel and logistics partner.</p>
+</body>
+</html>
+
+<!-- ================= contact.html ================= -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Get a Quote | CaremetEase</title>
+  <link rel="stylesheet" href="assets/css/style.css" />
+</head>
+<body>
+<h1>Get a Free Quote</h1>
+<form id="quoteForm">
+  <input type="text" placeholder="Full Name" required />
+  <input type="email" placeholder="Email" required />
+  <input type="tel" placeholder="Phone Number" required />
+  <select required>
+    <option value="">Procedure Type</option>
+    <option>Dental</option>
+    <option>Medical</option>
+  </select>
+  <input type="text" placeholder="Preferred Travel Dates" />
+  <textarea placeholder="Message"></textarea>
+  <button type="submit">Submit</button>
+</form>
+</body>
+</html>
+
+<!-- ================= assets/css/style.css ================= -->
+<style>
+body { font-family: Arial, sans-serif; margin:0; background:#f8fbff; color:#1f2933; }
+.navbar { position:sticky; top:0; background:#ffffff; display:flex; justify-content:space-between; padding:15px 30px; box-shadow:0 2px 10px rgba(0,0,0,.05);} 
+.navbar ul { list-style:none; display:flex; gap:20px; }
+.navbar a { text-decoration:none; color:#2563eb; font-weight:bold; }
+.hero { padding:90px 20px; text-align:center; background:linear-gradient(135deg,#e0f2fe,#ecfdf5); }
+.btn-primary { background:#2563eb; color:#fff; padding:14px 24px; border-radius:8px; text-decoration:none; }
+.btn-secondary { border:2px solid #2563eb; padding:12px 22px; border-radius:8px; margin-left:10px; }
+.grid { display:grid; grid-template-columns:repeat(auto-fit,minmax(220px,1fr)); gap:20px; padding:40px; }
+.card { background:#fff; padding:30px; border-radius:12px; box-shadow:0 10px 25px rgba(0,0,0,.08); }
+footer { background:#0f172a; color:#cbd5f5; text-align:center; padding:30px; }
+form { max-width:500px; margin:40px auto; display:flex; flex-direction:column; gap:12px; }
+input, select, textarea, button { padding:12px; border-radius:6px; border:1px solid #ccc; }
+button { background:#2563eb; color:white; border:none; font-weight:bold; }
+</style>
+
+<!-- ================= assets/js/main.js ================= -->
+<script>
+// Smooth scroll behavior
+const links = document.querySelectorAll('a[href^="#"]');
+links.forEach(link => {
+  link.addEventListener('click', e => {
+    e.preventDefault();
+    document.querySelector(link.getAttribute('href')).scrollIntoView({ behavior: 'smooth' });
+  });
+});
+</script>
+
