--- a/index.html
+++ b/index.html
@@ -3,50 +3,59 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Your Business Name</title>
+  <title>My Website</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-  <header>
-    <h1>Your Business Name</h1>
+  <header class="navbar">
+    <div class="logo">MySite</div>
     <nav>
-      <a href="#services">Services</a>
+      <a href="#features">Features</a>
       <a href="#about">About</a>
       <a href="#contact">Contact</a>
     </nav>
   </header>
 
-  <section class="hero">
-    <h2>We Help You Grow Your Business</h2>
-    <p>Professional solutions tailored to your needs.</p>
-    <a href="#contact" class="btn">Get Started</a>
-  </section>
+  <main class="hero">
+    <h1>Build Something Cool</h1>
+    <p>A clean, modern website made with HTML & CSS.</p>
+    <a href="#features" class="primary-btn">Explore</a>
+  </main>
 
-  <section id="services">
-    <h2>Our Services</h2>
-    <div class="cards">
-      <div class="card">Service One</div>
-      <div class="card">Service Two</div>
-      <div class="card">Service Three</div>
+  <section id="features" class="section">
+    <h2>What This Is</h2>
+    <div class="grid">
+      <div class="box">
+        <h3>Simple</h3>
+        <p>No frameworks, no clutter.</p>
+      </div>
+      <div class="box">
+        <h3>Modern</h3>
+        <p>Clean layout and smooth spacing.</p>
+      </div>
+      <div class="box">
+        <h3>Flexible</h3>
+        <p>Turn it into anything later.</p>
+      </div>
     </div>
   </section>
 
-  <section id="about">
-    <h2>About Us</h2>
+  <section id="about" class="section muted">
+    <h2>About</h2>
     <p>
-      We are a business dedicated to providing high-quality services
-      and building long-term relationships with our clients.
+      This site is a starting point. You can replace the text, add pages,
+      or style it however you want.
     </p>
   </section>
 
-  <section id="contact">
-    <h2>Contact Us</h2>
-    <p>Email: your@email.com</p>
+  <section id="contact" class="section">
+    <h2>Contact</h2>
+    <p>youremail@example.com</p>
   </section>
 
   <footer>
-    <p>© 2025 Your Business Name</p>
+    <p>© 2025</p>
   </footer>
 
 </body>
