--- a/index.html
+++ b/index.html
@@ -3,60 +3,96 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Website</title>
+  <title>CaremetEase</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-  <header class="navbar">
-    <div class="logo">MySite</div>
-    <nav>
-      <a href="#features">Features</a>
-      <a href="#about">About</a>
-      <a href="#contact">Contact</a>
-    </nav>
-  </header>
+<header class="navbar">
+  <div class="logo">CaremetEase</div>
+  <nav>
+    <a href="#services">Services</a>
+    <a href="#process">How It Works</a>
+    <a href="#contact">Contact</a>
+  </nav>
+</header>
 
-  <main class="hero">
-    <h1>Build Something Cool</h1>
-    <p>A clean, modern website made with HTML & CSS.</p>
-    <a href="#features" class="primary-btn">Explore</a>
-  </main>
+<section class="hero">
+  <h1>Quality Medical Care,<br>Made Easy</h1>
+  <p>
+    We help patients access affordable dental and medical care in Tijuana, Mexico —
+    while handling travel, lodging, and coordination every step of the way.
+  </p>
+  <a href="#contact" class="cta-btn">Get Started</a>
+</section>
 
-  <section id="features" class="section">
-    <h2>What This Is</h2>
-    <div class="grid">
-      <div class="box">
-        <h3>Simple</h3>
-        <p>No frameworks, no clutter.</p>
-      </div>
-      <div class="box">
-        <h3>Modern</h3>
-        <p>Clean layout and smooth spacing.</p>
-      </div>
-      <div class="box">
-        <h3>Flexible</h3>
-        <p>Turn it into anything later.</p>
-      </div>
+<section id="services" class="section">
+  <h2>What We Help With</h2>
+  <div class="cards">
+    <div class="card">
+      <h3>Dental Care</h3>
+      <p>Implants, crowns, cosmetic dentistry, and general dental procedures.</p>
     </div>
-  </section>
+    <div class="card">
+      <h3>Medical Care</h3>
+      <p>Access to licensed clinics and providers for various medical treatments.</p>
+    </div>
+    <div class="card">
+      <h3>Travel & Lodging</h3>
+      <p>Transportation assistance, hotel coordination, and border guidance.</p>
+    </div>
+  </div>
+</section>
 
-  <section id="about" class="section muted">
-    <h2>About</h2>
-    <p>
-      This site is a starting point. You can replace the text, add pages,
-      or style it however you want.
-    </p>
-  </section>
+<section id="process" class="section light">
+  <h2>How It Works</h2>
+  <div class="steps">
+    <div class="step">
+      <span>1</span>
+      <p>Tell us what care you’re looking for</p>
+    </div>
+    <div class="step">
+      <span>2</span>
+      <p>We connect you with trusted providers</p>
+    </div>
+    <div class="step">
+      <span>3</span>
+      <p>We help arrange travel & accommodations</p>
+    </div>
+    <div class="step">
+      <span>4</span>
+      <p>You focus on your care — we handle the rest</p>
+    </div>
+  </div>
+</section>
 
-  <section id="contact" class="section">
-    <h2>Contact</h2>
-    <p>youremail@example.com</p>
-  </section>
+<section class="section">
+  <h2>Why CaremetEase</h2>
+  <div class="cards">
+    <div class="card">
+      <h3>Trusted Clinics</h3>
+      <p>We work with vetted, licensed medical professionals.</p>
+    </div>
+    <div class="card">
+      <h3>Cost Transparency</h3>
+      <p>No surprises — clear information and guidance.</p>
+    </div>
+    <div class="card">
+      <h3>Personal Support</h3>
+      <p>You’re not navigating this alone.</p>
+    </div>
+  </div>
+</section>
 
-  <footer>
-    <p>© 2025</p>
-  </footer>
+<section id="contact" class="section accent">
+  <h2>Start Your Journey</h2>
+  <p>Email us to learn more and take the first step.</p>
+  <p class="email">contact@caremetease.com</p>
+</section>
+
+<footer>
+  <p>© 2025 CaremetEase</p>
+</footer>
 
 </body>
 </html>
