--- a/index.html
+++ b/index.html
@@ -3,96 +3,132 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CaremetEase</title>
+  <title>CaremetEase | Medical & Dental Care in Tijuana</title>
+  <meta name="description" content="CaremetEase helps patients access affordable medical and dental care in Tijuana, Mexico with support for travel, hotels, and coordination." />
   <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
 
-<header class="navbar">
-  <div class="logo">CaremetEase</div>
-  <nav>
-    <a href="#services">Services</a>
-    <a href="#process">How It Works</a>
-    <a href="#contact">Contact</a>
-  </nav>
-</header>
+  <!-- NAVIGATION -->
+  <header class="navbar">
+    <div class="logo">CaremetEase</div>
+    <nav>
+      <a href="#services">Services</a>
+      <a href="#how-it-works">How It Works</a>
+      <a href="#why-us">Why Us</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
 
-<section class="hero">
-  <h1>Quality Medical Care,<br>Made Easy</h1>
-  <p>
-    We help patients access affordable dental and medical care in Tijuana, Mexico —
-    while handling travel, lodging, and coordination every step of the way.
-  </p>
-  <a href="#contact" class="cta-btn">Get Started</a>
-</section>
+  <!-- HERO -->
+  <section class="hero">
+    <h1>Medical & Dental Care<br>Without the Stress</h1>
+    <p>
+      CaremetEase connects patients with trusted medical and dental providers
+      in Tijuana, Mexico — while helping coordinate travel, lodging, and logistics.
+    </p>
+    <a href="#contact" class="cta-btn">Request Information</a>
+  </section>
 
-<section id="services" class="section">
-  <h2>What We Help With</h2>
-  <div class="cards">
-    <div class="card">
-      <h3>Dental Care</h3>
-      <p>Implants, crowns, cosmetic dentistry, and general dental procedures.</p>
-    </div>
-    <div class="card">
-      <h3>Medical Care</h3>
-      <p>Access to licensed clinics and providers for various medical treatments.</p>
-    </div>
-    <div class="card">
-      <h3>Travel & Lodging</h3>
-      <p>Transportation assistance, hotel coordination, and border guidance.</p>
-    </div>
-  </div>
-</section>
+  <!-- SERVICES -->
+  <section id="services" class="section">
+    <h2>Our Services</h2>
 
-<section id="process" class="section light">
-  <h2>How It Works</h2>
-  <div class="steps">
-    <div class="step">
-      <span>1</span>
-      <p>Tell us what care you’re looking for</p>
-    </div>
-    <div class="step">
-      <span>2</span>
-      <p>We connect you with trusted providers</p>
-    </div>
-    <div class="step">
-      <span>3</span>
-      <p>We help arrange travel & accommodations</p>
-    </div>
-    <div class="step">
-      <span>4</span>
-      <p>You focus on your care — we handle the rest</p>
-    </div>
-  </div>
-</section>
+    <div class="cards">
+      <div class="card">
+        <h3>Dental Care</h3>
+        <p>
+          Dental implants, crowns, cosmetic dentistry, and general dental services
+          through licensed providers.
+        </p>
+      </div>
 
-<section class="section">
-  <h2>Why CaremetEase</h2>
-  <div class="cards">
-    <div class="card">
-      <h3>Trusted Clinics</h3>
-      <p>We work with vetted, licensed medical professionals.</p>
-    </div>
-    <div class="card">
-      <h3>Cost Transparency</h3>
-      <p>No surprises — clear information and guidance.</p>
-    </div>
-    <div class="card">
-      <h3>Personal Support</h3>
-      <p>You’re not navigating this alone.</p>
-    </div>
-  </div>
-</section>
+      <div class="card">
+        <h3>Medical Care</h3>
+        <p>
+          Access to a range of medical procedures with experienced professionals
+          and modern clinics.
+        </p>
+      </div>
 
-<section id="contact" class="section accent">
-  <h2>Start Your Journey</h2>
-  <p>Email us to learn more and take the first step.</p>
-  <p class="email">contact@caremetease.com</p>
-</section>
+      <div class="card">
+        <h3>Travel & Lodging Support</h3>
+        <p>
+          Guidance with transportation, hotels, and navigating cross-border travel.
+        </p>
+      </div>
+    </div>
+  </section>
 
-<footer>
-  <p>© 2025 CaremetEase</p>
-</footer>
+  <!-- HOW IT WORKS -->
+  <section id="how-it-works" class="section light">
+    <h2>How It Works</h2>
+
+    <div class="steps">
+      <div class="step">
+        <span>1</span>
+        <p>Contact us with your treatment needs</p>
+      </div>
+
+      <div class="step">
+        <span>2</span>
+        <p>We match you with trusted providers in Tijuana</p>
+      </div>
+
+      <div class="step">
+        <span>3</span>
+        <p>We help coordinate travel and accommodations</p>
+      </div>
+
+      <div class="step">
+        <span>4</span>
+        <p>You focus on your care — we support the process</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- WHY US -->
+  <section id="why-us" class="section">
+    <h2>Why CaremetEase</h2>
+
+    <div class="cards">
+      <div class="card">
+        <h3>Trusted Network</h3>
+        <p>
+          We work with vetted clinics and licensed healthcare professionals.
+        </p>
+      </div>
+
+      <div class="card">
+        <h3>Clear Guidance</h3>
+        <p>
+          We help you understand your options and what to expect.
+        </p>
+      </div>
+
+      <div class="card">
+        <h3>Personal Support</h3>
+        <p>
+          You’re not navigating medical travel alone — we’re here to help.
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <!-- CONTACT -->
+  <section id="contact" class="section accent">
+    <h2>Get in Touch</h2>
+    <p>
+      Reach out to learn more or start planning your care.
+    </p>
+    <p class="email">contact@caremetease.com</p>
+  </section>
+
+  <!-- FOOTER -->
+  <footer>
+    <p>© 2025 CaremetEase. All rights reserved.</p>
+  </footer>
 
 </body>
 </html>
