--- a/index.html
+++ b/index.html
@@ -122,12 +122,12 @@
     <p>
       Reach out to learn more or start planning your care.
     </p>
-    <p class="email">contact@caremetease.com</p>
+    <p class="email">jacobwillis@tlhschools.org</p>
   </section>
 
   <!-- FOOTER -->
   <footer>
-    <p>© 2025 CaremetEase. All rights reserved.</p>
+    <p>© 2025 CaremetEase All rights reserved.</p>
   </footer>
 
 </body>
