--- a/index.html
+++ b/index.html
@@ -118,12 +118,49 @@
 
   <!-- CONTACT -->
   <section id="contact" class="section accent">
-    <h2>Get in Touch</h2>
-    <p>
-      Reach out to learn more or start planning your care.
-    </p>
-    <p class="email">jacobwillis@tlhschools.org</p>
-  </section>
+  <h2>Request Information</h2>
+  <p>
+    Tell us a little about what you’re looking for and we’ll get back to you.
+  </p>
+
+  <form
+    class="contact-form"
+    action="https://formspree.io/f/mjgvegoe"
+    method="POST"
+  >
+    <input
+      type="text"
+      name="name"
+      placeholder="Full Name"
+      required
+    />
+
+    <input
+      type="email"
+      name="email"
+      placeholder="Email Address"
+      required
+    />
+
+    <select name="interest" required>
+      <option value="">What are you interested in?</option>
+      <option>Dental Care</option>
+      <option>Medical Care</option>
+      <option>Travel & Lodging Support</option>
+      <option>General Question</option>
+    </select>
+
+    <textarea
+      name="message"
+      placeholder="Tell us more about your situation"
+      rows="5"
+      required
+    ></textarea>
+
+    <button type="submit">Submit Request</button>
+  </form>
+</section>
+
 
   <!-- FOOTER -->
   <footer>
