--- a/index.html
+++ b/index.html
@@ -14,66 +14,74 @@
   <header class="navbar">
     <div class="logo">CaremetEase</div>
     <nav>
-      <a href="index.html">Home</a>
-      <a href="services.html">Services</a>
-      <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
+      <a href="#services">Services</a>
+      <a href="#how-it-works">How It Works</a>
+      <a href="#why-us">Why Us</a>
+      <a href="#contact">Contact</a>
     </nav>
   </header>
 
   <!-- HERO -->
   <section class="hero">
-    <h1 class="fade-in">Medical & Dental Care<br>Without the Stress</h1>
-    <p class="fade-in delay-1">
+    <h1>Medical & Dental Care<br>Without the Stress</h1>
+    <p>
       CaremetEase connects patients with trusted medical and dental providers
       in Tijuana, Mexico — while helping coordinate travel, lodging, and logistics.
     </p>
-    <a href="contact.html" class="cta-btn fade-in delay-2">Request Information</a>
+    <a href="#contact" class="cta-btn">Request Information</a>
   </section>
 
   <!-- SERVICES -->
   <section id="services" class="section">
-    <h2 class="fade-in">Our Services</h2>
+    <h2>Our Services</h2>
 
     <div class="cards">
-      <div class="card fade-in">
+      <div class="card">
         <h3>Dental Care</h3>
-        <p>Dental implants, crowns, cosmetic dentistry, and general dental services through licensed providers.</p>
+        <p>
+          Dental implants, crowns, cosmetic dentistry, and general dental services
+          through licensed providers.
+        </p>
       </div>
 
-      <div class="card fade-in delay-1">
+      <div class="card">
         <h3>Medical Care</h3>
-        <p>Access to a range of medical procedures with experienced professionals and modern clinics.</p>
+        <p>
+          Access to a range of medical procedures with experienced professionals
+          and modern clinics.
+        </p>
       </div>
 
-      <div class="card fade-in delay-2">
+      <div class="card">
         <h3>Travel & Lodging Support</h3>
-        <p>Guidance with transportation, hotels, and navigating cross-border travel.</p>
+        <p>
+          Guidance with transportation, hotels, and navigating cross-border travel.
+        </p>
       </div>
     </div>
   </section>
 
   <!-- HOW IT WORKS -->
   <section id="how-it-works" class="section light">
-    <h2 class="fade-in">How It Works</h2>
+    <h2>How It Works</h2>
 
     <div class="steps">
-      <div class="step fade-in">
+      <div class="step">
         <span>1</span>
         <p>Contact us with your treatment needs</p>
       </div>
 
-      <div class="step fade-in delay-1">
+      <div class="step">
         <span>2</span>
         <p>We match you with trusted providers in Tijuana</p>
       </div>
 
-      <div class="step fade-in delay-2">
+      <div class="step">
         <span>3</span>
         <p>We help coordinate travel and accommodations</p>
       </div>
 
-      <div class="step fade-in delay-3">
+      <div class="step">
         <span>4</span>
         <p>You focus on your care — we support the process</p>
       </div>
@@ -82,49 +90,77 @@
 
   <!-- WHY US -->
   <section id="why-us" class="section">
-    <h2 class="fade-in">Why CaremetEase</h2>
+    <h2>Why CaremetEase</h2>
 
     <div class="cards">
-      <div class="card fade-in">
+      <div class="card">
         <h3>Trusted Network</h3>
-        <p>We work with vetted clinics and licensed healthcare professionals.</p>
+        <p>
+          We work with vetted clinics and licensed healthcare professionals.
+        </p>
       </div>
 
-      <div class="card fade-in delay-1">
+      <div class="card">
         <h3>Clear Guidance</h3>
-        <p>We help you understand your options and what to expect.</p>
+        <p>
+          We help you understand your options and what to expect.
+        </p>
       </div>
 
-      <div class="card fade-in delay-2">
+      <div class="card">
         <h3>Personal Support</h3>
-        <p>You’re not navigating medical travel alone — we’re here to help.</p>
+        <p>
+          You’re not navigating medical travel alone — we’re here to help.
+        </p>
       </div>
     </div>
   </section>
 
   <!-- CONTACT -->
   <section id="contact" class="section accent">
-    <h2 class="fade-in">Request Information</h2>
-    <p class="fade-in delay-1">Tell us a little about what you’re looking for and we’ll get back to you.</p>
+  <h2>Request Information</h2>
+  <p>
+    Tell us a little about what you’re looking for and we’ll get back to you.
+  </p>
 
-    <form
-      class="contact-form fade-in delay-2"
-      action="https://formspree.io/f/mjgvegoe"
-      method="POST"
-    >
-      <input type="text" name="name" placeholder="Full Name" required />
-      <input type="email" name="email" placeholder="Email Address" required />
-      <select name="interest" required>
-        <option value="">What are you interested in?</option>
-        <option>Dental Care</option>
-        <option>Medical Care</option>
-        <option>Travel & Lodging Support</option>
-        <option>General Question</option>
-      </select>
-      <textarea name="message" placeholder="Tell us more about your situation" rows="5" required></textarea>
-      <button type="submit">Submit Request</button>
-    </form>
-  </section>
+  <form
+    class="contact-form"
+    action="https://formspree.io/f/mjgvegoe"
+    method="POST"
+  >
+    <input
+      type="text"
+      name="name"
+      placeholder="Full Name"
+      required
+    />
+
+    <input
+      type="email"
+      name="email"
+      placeholder="Email Address"
+      required
+    />
+
+    <select name="interest" required>
+      <option value="">What are you interested in?</option>
+      <option>Dental Care</option>
+      <option>Medical Care</option>
+      <option>Travel & Lodging Support</option>
+      <option>General Question</option>
+    </select>
+
+    <textarea
+      name="message"
+      placeholder="Tell us more about your situation"
+      rows="5"
+      required
+    ></textarea>
+
+    <button type="submit">Submit Request</button>
+  </form>
+</section>
+
 
   <!-- FOOTER -->
   <footer>
