--- a/index.html
+++ b/index.html
@@ -5,7 +5,206 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>CaremetEase | Medical & Dental Care in Tijuana</title>
   <meta name="description" content="CaremetEase helps patients access affordable medical and dental care in Tijuana, Mexico with support for travel, hotels, and coordination." />
-  <link rel="stylesheet" href="style.css" />
+
+  <!-- CSS -->
+  <style>
+    /* GENERAL STYLES */
+    body {
+      font-family: 'Arial', sans-serif;
+      margin: 0;
+      padding: 0;
+      line-height: 1.6;
+      color: #333;
+      background-color: #f9f9f9;
+      scroll-behavior: smooth;
+    }
+
+    a { text-decoration: none; color: inherit; }
+
+    /* NAVBAR */
+    .navbar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 20px 50px;
+      background-color: #fff;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+    }
+
+    .navbar a { margin-left: 20px; font-weight: 500; position: relative; }
+
+    .navbar a::after {
+      content: '';
+      display: block;
+      height: 2px;
+      width: 0;
+      background: #007bff;
+      transition: width 0.3s;
+      position: absolute;
+      bottom: -5px;
+      left: 0;
+    }
+
+    .navbar a:hover::after { width: 100%; }
+
+    /* HERO */
+    .hero {
+      text-align: center;
+      padding: 120px 20px;
+      background: linear-gradient(-45deg, #6dd5fa, #ffffff, #00c6ff, #f0f0f0);
+      background-size: 400% 400%;
+      animation: gradientMove 15s ease infinite;
+    }
+
+    @keyframes gradientMove {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
+
+    .hero h1, .hero p, .cta-btn {
+      opacity: 0;
+      transform: translateY(20px);
+      animation: fadeInUp 1s forwards;
+    }
+
+    .hero h1 { animation-delay: 0.5s; }
+    .hero p { animation-delay: 1s; }
+    .cta-btn { animation-delay: 1.5s; }
+
+    @keyframes fadeInUp {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    .cta-btn {
+      background-color: #007bff;
+      color: #fff;
+      padding: 15px 35px;
+      border-radius: 50px;
+      font-weight: bold;
+      transition: transform 0.3s, box-shadow 0.3s;
+      display: inline-block;
+    }
+
+    .cta-btn:hover {
+      transform: scale(1.05);
+      box-shadow: 0 8px 20px rgba(0, 123, 255, 0.3);
+    }
+
+    /* SECTIONS */
+    .section {
+      padding: 80px 20px;
+      text-align: center;
+    }
+
+    .light { background-color: #f5f5f5; }
+    .accent { background-color: #007bff; color: #fff; }
+
+    h2 { font-size: 2.5em; margin-bottom: 50px; }
+
+    .cards {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 30px;
+    }
+
+    .card {
+      background-color: #fff;
+      padding: 30px 20px;
+      border-radius: 12px;
+      box-shadow: 0 8px 25px rgba(0,0,0,0.1);
+      max-width: 300px;
+      flex: 1 1 250px;
+      opacity: 0;
+      transform: translateY(50px);
+      transition: all 0.8s ease-out;
+    }
+
+    .card.visible { opacity: 1; transform: translateY(0); }
+
+    /* HOW IT WORKS */
+    .steps {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 40px;
+    }
+
+    .step {
+      background: #fff;
+      padding: 25px;
+      border-radius: 12px;
+      width: 200px;
+      text-align: center;
+      box-shadow: 0 6px 20px rgba(0,0,0,0.1);
+      opacity: 0;
+      transform: translateY(50px);
+      transition: all 0.6s ease-out;
+    }
+
+    .step.visible { opacity: 1; transform: translateY(0); }
+
+    .step span {
+      display: inline-block;
+      background: #007bff;
+      color: #fff;
+      width: 50px;
+      height: 50px;
+      line-height: 50px;
+      border-radius: 50%;
+      font-weight: bold;
+      margin-bottom: 15px;
+    }
+
+    /* CONTACT FORM */
+    .contact-form {
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+      max-width: 500px;
+      margin: 0 auto;
+    }
+
+    .contact-form input,
+    .contact-form select,
+    .contact-form textarea {
+      padding: 15px;
+      border-radius: 8px;
+      border: none;
+      outline: none;
+      font-size: 1em;
+    }
+
+    .contact-form button {
+      padding: 15px;
+      border-radius: 50px;
+      border: none;
+      font-size: 1em;
+      font-weight: bold;
+      background-color: #fff;
+      color: #007bff;
+      cursor: pointer;
+      transition: transform 0.3s, box-shadow 0.3s;
+    }
+
+    .contact-form button:hover {
+      transform: scale(1.05);
+      box-shadow: 0 8px 20px rgba(255,255,255,0.3);
+    }
+
+    /* FOOTER */
+    footer {
+      text-align: center;
+      padding: 20px;
+      background: #333;
+      color: #fff;
+    }
+  </style>
 </head>
 
 <body>
@@ -34,29 +233,18 @@
   <!-- SERVICES -->
   <section id="services" class="section">
     <h2>Our Services</h2>
-
     <div class="cards">
       <div class="card">
         <h3>Dental Care</h3>
-        <p>
-          Dental implants, crowns, cosmetic dentistry, and general dental services
-          through licensed providers.
-        </p>
+        <p>Dental implants, crowns, cosmetic dentistry, and general dental services through licensed providers.</p>
       </div>
-
       <div class="card">
         <h3>Medical Care</h3>
-        <p>
-          Access to a range of medical procedures with experienced professionals
-          and modern clinics.
-        </p>
+        <p>Access to a range of medical procedures with experienced professionals and modern clinics.</p>
       </div>
-
       <div class="card">
         <h3>Travel & Lodging Support</h3>
-        <p>
-          Guidance with transportation, hotels, and navigating cross-border travel.
-        </p>
+        <p>Guidance with transportation, hotels, and navigating cross-border travel.</p>
       </div>
     </div>
   </section>
@@ -64,123 +252,62 @@
   <!-- HOW IT WORKS -->
   <section id="how-it-works" class="section light">
     <h2>How It Works</h2>
-
     <div class="steps">
-      <div class="step">
-        <span>1</span>
-        <p>Contact us with your treatment needs</p>
-      </div>
-
-      <div class="step">
-        <span>2</span>
-        <p>We match you with trusted providers in Tijuana</p>
-      </div>
-
-      <div class="step">
-        <span>3</span>
-        <p>We help coordinate travel and accommodations</p>
-      </div>
-
-      <div class="step">
-        <span>4</span>
-        <p>You focus on your care — we support the process</p>
-      </div>
+      <div class="step"><span>1</span><p>Contact us with your treatment needs</p></div>
+      <div class="step"><span>2</span><p>We match you with trusted providers in Tijuana</p></div>
+      <div class="step"><span>3</span><p>We help coordinate travel and accommodations</p></div>
+      <div class="step"><span>4</span><p>You focus on your care — we support the process</p></div>
     </div>
   </section>
 
   <!-- WHY US -->
   <section id="why-us" class="section">
     <h2>Why CaremetEase</h2>
-
     <div class="cards">
-      <div class="card">
-        <h3>Trusted Network</h3>
-        <p>
-          We work with vetted clinics and licensed healthcare professionals.
-        </p>
-      </div>
-
-      <div class="card">
-        <h3>Clear Guidance</h3>
-        <p>
-          We help you understand your options and what to expect.
-        </p>
-      </div>
-
-      <div class="card">
-        <h3>Personal Support</h3>
-        <p>
-          You’re not navigating medical travel alone — we’re here to help.
-        </p>
-      </div>
+      <div class="card"><h3>Trusted Network</h3><p>We work with vetted clinics and licensed healthcare professionals.</p></div>
+      <div class="card"><h3>Clear Guidance</h3><p>We help you understand your options and what to expect.</p></div>
+      <div class="card"><h3>Personal Support</h3><p>You’re not navigating medical travel alone — we’re here to help.</p></div>
     </div>
   </section>
 
   <!-- CONTACT -->
   <section id="contact" class="section accent">
-  <h2>Request Information</h2>
-  <p>
-    Tell us a little about what you’re looking for and we’ll get back to you.
-  </p>
-
-  <form
-    class="contact-form"
-    action="https://formspree.io/f/mjgvegoe"
-    method="POST"
-  >
-    <input
-      type="text"
-      name="name"
-      placeholder="Full Name"
-      required
-    />
-
-    <input
-      type="email"
-      name="email"
-      placeholder="Email Address"
-      required
-    />
-
-    <select name="interest" required>
-      <option value="">What are you interested in?</option>
-      <option>Dental Care</option>
-      <option>Medical Care</option>
-      <option>Travel & Lodging Support</option>
-      <option>General Question</option>
-    </select>
-
-    <textarea
-      name="message"
-      placeholder="Tell us more about your situation"
-      rows="5"
-      required
-    ></textarea>
-
-    <button type="submit">Submit Request</button>
-  </form>
-</section>
-
+    <h2>Request Information</h2>
+    <p>Tell us a little about what you’re looking for and we’ll get back to you.</p>
+    <form class="contact-form" action="https://formspree.io/f/mjgvegoe" method="POST">
+      <input type="text" name="name" placeholder="Full Name" required />
+      <input type="email" name="email" placeholder="Email Address" required />
+      <select name="interest" required>
+        <option value="">What are you interested in?</option>
+        <option>Dental Care</option>
+        <option>Medical Care</option>
+        <option>Travel & Lodging Support</option>
+        <option>General Question</option>
+      </select>
+      <textarea name="message" placeholder="Tell us more about your situation" rows="5" required></textarea>
+      <button type="submit">Submit Request</button>
+    </form>
+  </section>
 
   <!-- FOOTER -->
   <footer>
     <p>© 2025 CaremetEase All rights reserved.</p>
   </footer>
-<script>
-  const cards = document.querySelectorAll('.card');
-  const steps = document.querySelectorAll('.step');
 
-  const observer = new IntersectionObserver(entries => {
-    entries.forEach(entry => {
-      if(entry.isIntersecting){
-        entry.target.classList.add('visible');
-      }
+  <!-- JS FOR SCROLL ANIMATION -->
+  <script>
+    document.addEventListener("DOMContentLoaded", () => {
+      const observer = new IntersectionObserver((entries) => {
+        entries.forEach(entry => {
+          if(entry.isIntersecting) {
+            entry.target.classList.add('visible');
+          }
+        });
+      }, { threshold: 0.2 });
+
+      document.querySelectorAll('.card, .step').forEach(el => observer.observe(el));
     });
-  }, { threshold: 0.2 });
-
-  cards.forEach(card => observer.observe(card));
-  steps.forEach(step => observer.observe(step));
-</script>
+  </script>
 
 </body>
 </html>
